# facedemo

./: .gitignore  CODE_TASKS.md
docs/superpowers/plans/: 2026-03-15-facedemo-optimization-plan.md
docs/superpowers/specs/: 2026-03-15-facedemo-optimization-design.md  FUNCTION_FLOW.md  RUST_REFACTOR_PLAN.md
facedemo-rust/: BUILD.md  Cargo.toml  Dioxus.toml
facedemo-rust/face-core/: Cargo.toml
facedemo-rust/face-core/src/: client.rs  config.rs  face_api.rs  lib.rs  websocket.rs
facedemo-rust/face-core/src/models/: log_entry.rs  mod.rs  user.rs
facedemo-rust/face-core/tests/: client_tests.rs  config_tests.rs  face_api_tests.rs  websocket_tests.rs
facedemo-rust/src/: app.rs  lib.rs  main.rs
facedemo-rust/src-tauri/: Cargo.toml  tauri.conf.json
facedemo-rust/src-tauri/src/: config.rs  lib.rs  main.rs  runtime.rs  state.rs
facedemo-rust/src-tauri/src/commands/: camera.rs  face_api.rs  mod.rs  websocket.rs
facedemo-rust/src-tauri/tests/: runtime_tests.rs
facedemo-rust/src/components/: image_viewer.rs  mod.rs  user_info_modal.rs
facedemo-rust/src/pages/: face_library.rs  mod.rs  recognition_log.rs
facedemo-rust/src/services/: backend.rs  mod.rs  tauri_bridge.rs
facedemo-rust/src/state/: app_controller.rs  app_state.rs  mod.rs
facedemo-rust/src/theme/: variables.rs
facedemo-rust/tests/: app_controller_tests.rs  app_state_tests.rs  backend_tests.rs
