[package]
name = "facedemo-rust"
version = "0.1.0"
edition = "2024"

[features]
default = []
tauri-backend = [
    "dep:js-sys",
    "dep:serde-wasm-bindgen",
    "dep:tauri-wasm",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
]

[dependencies]
async-trait = "0.1"
dioxus = { version = "0.6.3", features = ["web"] }
face-core = { path = "face-core" }
futures = "0.3"
js-sys = { version = "0.3", optional = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6", optional = true }
tauri-wasm = { version = "0.2.0", features = ["serde"], optional = true }
thiserror = "2"
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dotenvy = "0.15"
