[package]
name = "src-tauri"
version = "0.1.0"
edition = "2024"

[lib]
name = "src_tauri"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
dotenvy = "0.15"
face-core = { path = "../face-core" }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3" }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tauri-build = { version = "2.5.6" }
